<resources>
    <string name="app_name">TTIM</string>
    <string name="openDrawer">打开侧边栏</string>
    <string name="closeDrawer">关闭侧边栏</string>
    <string name="unLogin">未登录</string>
    <string name="copyRightItem">版权声明</string>
    <string name="logout">退出登录</string>
    <string name="aboutMe">关于我</string>
    <string name="setting">设置</string>
    <string name="favorite">收藏</string>
    <string name="copyRight">Copyright &#169; 2018. welcomeworld All rights reserved</string>
    <string name="image_description">Image Description</string>
    <string name="account_hint">账号    //自定义数字</string>
    <string name="username_hint">昵称</string>
    <string name="password_hint">密码</string>
    <string name="register_text">注   册</string>
    <string name="have_account">已有账号</string>
    <string name="message">消息</string>
    <string name="send">发送</string>
    <string name="account">账号</string>
    <string name="login_text">登   录</string>
    <string name="new_user">新用户</string>
    <string name="forget_password">忘记密码</string>
    <string name="account_text">用户账号</string>
    <string name="time_text">22:00</string>
    <string name="message_count_text">99</string>
    <string name="add_friends">添加好友</string>
    <string name="scan">扫一扫</string>
    <string name="theme">主题</string>
    <string name="friends">好友</string>
    <string name="new_friends">新的朋友</string>
    <string name="friend_request">好友申请</string>
    <string name="nothing">  </string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="version_tip">已经是最新版本</string>
    <string name="update_version">版本更新</string>
    <string name="code_source">源代码</string>
    <string name="talk_author">与作者交流</string>
    <string name="version_name">1.0.0</string>
    <string name="language">语言</string>
    <string name="chinese">中文</string>
    <string name="english">英文</string>
    <string name="clear_cache">清理缓存</string>
    <string name="flow_count">流量统计</string>
    <string name="clear_cache_message">清理缓存后聊天记录将会清空！\n是否清理缓存?</string>
    <string name="notification_on">开启通知</string>
    <string name="notification_on_summary">当前允许新消息通知</string>
    <string name="notification_off_summary">已关闭通知</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="notification_ring">通知铃声</string>
    <string name="have_use">已使用：\n</string>
    <string name="up_flow">上行流量 \n</string>
    <string name="down_flow">下行流量 </string>
    <string name="refresh">下拉刷新</string>
    <string name="function_give_up">此功能正在开发中</string>
</resources>
