<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            app:theme="@style/main_toolbar"
            app:title="@string/message"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp">
            <TextView
                android:id="@+id/about_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:lines="1"
                android:ellipsize="end"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:text="@string/aboutMe"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ImageView
        android:layout_marginTop="56dp"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/image_description"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:text="@string/version_name"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/about_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/transparent"
            android:gravity="start|center"
            android:text="@string/update_version"
            android:textSize="16sp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <Button
            android:id="@+id/about_update_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/transparent"
            android:baselineAligned="false"
            android:gravity="end|center"
            android:text="@string/version_tip"
            android:textColor="@color/gray"
            android:textSize="16sp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
        <Button
            android:id="@+id/about_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="start|center"
            android:textSize="16sp"
            android:background="@color/white"
            android:text="@string/code_source"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/about_talk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="start|center"
            android:textSize="16sp"
            android:background="@color/white"
            android:text="@string/talk_author"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
</LinearLayout>