<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. welcomeworld All rights reserved
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friend_request"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/recyclerview_newfriend_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_gravity="end"
                android:text="@string/time_text"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:id="@+id/recyclerview_newfriend_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:padding="8dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/image_description"
            android:scaleType="fitXY"
            android:background="#00000000" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">
            <TextView
                android:id="@+id/recyclerview_newfriend_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_hint"/>
            <TextView
                android:id="@+id/recyclerview_newfriend_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="验证内容"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <cn.dmandp.view.NDSpinner
                android:id="@+id/recyclerview_newfriend_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/new_friend_spinner"
                android:spinnerMode="dropdown">
            </cn.dmandp.view.NDSpinner>
            <TextView
                android:id="@+id/recyclerview_newfriend_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>