<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. welcomeworld All rights reserved
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:minHeight="200dp">

        <ImageView
            android:id="@+id/recyclerview_favorite_primaryimage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:padding="8dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/image_description"
            android:scaleType="fitXY"
            android:background="#00000000" />

        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recyclerview_favorite_username"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textSize="20sp"
                android:text="@string/account_text"
                android:textColor="#000" />

            <TextView
                android:id="@+id/recyclerview_favorite_content"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:textSize="16sp"
                android:lines="1"
                android:ellipsize="end"
                android:text="@string/message" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/recyclerview_favorite_action"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            android:background="#00000000" />

    </android.support.v7.widget.CardView>

</LinearLayout>